bug fix for both scoring section spacing and apposing player had 1 move left after win

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 *{
     text-align: center;   
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -6,6 +8,7 @@
 }
 #image{
    height: 339px;
+   margin-top:50px;
 }
 main{
    display: flex;
@@ -35,13 +38,13 @@ main{
 #score{
     font-size: 3rem;
     padding: 0;
-    margin: 10px 0 10px 0
-
-
+    margin: 5px 0;
+   
 }
 #game-setup{
     
-    margin-top:none;
+    margin-top:5px;
+   
 }
 button{
     width: 167px;
